fixes search results alignment

--- a/components/layout/header/index.styl
+++ b/components/layout/header/index.styl
@@ -63,7 +63,7 @@
       list-style-type none
 
     .search__results__result
-      padding 4px 0 4px (container_pad * 3)
+      padding 4px 0 4px 50px
       font-size 1em
       border-top 1px solid bordergray
 
